Fix bean AuditingHandler creation exception in Spring Data 3